# RenderingTest

./: .clang-format  CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: CMakeLists.txt  camera.cc  camera.hh  input.cc  input.hh  main.cc  shader.cc  shader.hh  shader_program.cc  shader_program.hh  stb_image.h  texture.cc  texture.hh  ui.cc  ui.hh  utils.hh  window.cc  window.hh
src/Shaders/: filmgrain_shader.fs  light_cube_shader.fs  lighting_fragment_shader.fs  lighting_vertex_shader.vs  passthrough_fragment_shader.fs  postprocess_fragment_shader.fs  vertex_shader.vs  vertex_shader2.vs
src/imgui/: TextEditor.cpp
